--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
         }
       ],
     "dependencies": {
-      "com.unity.xr.interaction.toolkit": "2.2.0"
+      "com.unity.xr.interaction.toolkit": "2.2.0",
+      "com.unity.ugui": "1.0.0",
+      "com.unity.visualeffectgraph": "10.3.2",
+      "com.virgis.wireframe-shader": "1.0.201",
+      "com.unity.xr.management": "4.2.1"
     },
     "keywords": [
         "geometry",
